[tool.poetry]
name = "lukasz-ai-agent"
version = "0.1.0"
description = "Fully autonomous financial assistant with real-time data and AI integration"
authors = ["Lukasz Piasecki <piasecki.lukasz2000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.110"
uvicorn = "^0.29"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
